Bug 952084 - Porting nsIDOMMozConnection to WebIDL, r=ehsan, r=bz