dom/webidl/Navigator.webidl
@@ -229,7 +229,6 @@ partial interface Navigator {
 };
 
 // nsIDOMMozNavigatorNetwork
-interface MozConnection;
 partial interface Navigator {
   [Pref="dom.network.enabled"]
   readonly attribute MozConnection? mozConnection;
